WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61686
prevent HTMLLinkElement from watching multiple CachedResources
https://bugs.webkit.org/show_bug.cgi?id=61686
Summary
prevent HTMLLinkElement from watching multiple CachedResources
Gavin Peters
Reported
2011-05-28 07:38:33 PDT
prevent HTMLLinkElement from watching multiple CachedResources
Attachments
Patch
(7.42 KB, patch)
2011-05-28 07:45 PDT
,
Gavin Peters
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Peters
Comment 1
2011-05-28 07:45:18 PDT
Created
attachment 95260
[details]
Patch
Gavin Peters
Comment 2
2011-05-28 07:49:01 PDT
Comment on
attachment 95260
[details]
Patch This is a nasty bug that causes a lot of crashes in chromium; thanks to Ziga Mahkovec <
ziga@google.com
> for making a really good reproduction (I was chasing this bug, without success, for a while before he gave me that), and to Chris Bentzel <
cbentzel@chromium.org
> for making a first draft at a fix!
WebKit Commit Bot
Comment 3
2011-05-28 11:19:01 PDT
Comment on
attachment 95260
[details]
Patch Clearing flags on attachment: 95260 Committed
r87618
: <
http://trac.webkit.org/changeset/87618
>
WebKit Commit Bot
Comment 4
2011-05-28 11:19:06 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 5
2011-05-28 11:37:06 PDT
The commit-queue encountered the following flaky tests while processing
attachment 95260
[details]
: http/tests/websocket/tests/multiple-connections.html
bug 53825
(author:
abarth@webkit.org
) The commit-queue is continuing to process your patch.
Adam Barth
Comment 6
2011-05-30 00:21:59 PDT
I'm sorry I had to roll out this patch. It caused the following assert: BrowserFocusTest.FocusOnReload: ASSERTION FAILED: m_cachedLinkResource.get() == resource third_party/WebKit/Source/WebCore/html/HTMLLinkElement.cpp(461) : virtual void WebCore::HTMLLinkElement::notifyFinished(WebCore::CachedResource*)
http://build.chromium.org/p/chromium/builders/Linux%20Tests%20%28Views%20dbg%29%281%29/builds/952/steps/interactive_ui_tests/logs/FocusOnReload
Adam Barth
Comment 7
2011-05-30 08:51:40 PDT
Comment on
attachment 95260
[details]
Patch Actually, I was wrong. It was a different patch that caused the problem.
Adam Barth
Comment 8
2011-05-30 10:05:41 PDT
Comment on
attachment 95260
[details]
Patch Clearing flags on attachment: 95260 Committed
r87691
: <
http://trac.webkit.org/changeset/87691
>
Adam Barth
Comment 9
2011-05-30 10:05:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug