2011-05-28  Gavin Peters  <gavinp@chromium.org>

Reviewed by Adam Barth.

        prevent HTMLLinkElement from watching multiple CachedResources
        https://bugs.webkit.org/show_bug.cgi?id=61686

        If we modify an existing link element, stop listening to the previous
        cached resource, to prevent double notifications (which crash).

        * fast/dom/HTMLLinkElement/prefetch-too-many-clients-expected.txt: Added.
        * fast/dom/HTMLLinkElement/prefetch-too-many-clients.html: Added.
        * platform/gtk/Skipped:
        * platform/mac/Skipped:
        * platform/qt/Skipped:
        * platform/win/Skipped:
2011-05-28  Gavin Peters  <gavinp@chromium.org>

        Reviewed by Adam Barth.

        prevent HTMLLinkElement from watching multiple CachedResources
        https://bugs.webkit.org/show_bug.cgi?id=61686

        If we modify an existing link element, stop listening to the previous
        cached resource, to prevent double notifications (which crash).

        Test: fast/dom/HTMLLinkElement/prefetch-too-many-clients.html

        * html/HTMLLinkElement.cpp:
        (WebCore::HTMLLinkElement::process):

Canonical link: https://commits.webkit.org/77126@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87618 268f45cc-cd09-0410-ab3c-d52691b4dbfc